# raydium-balance-fetcher

./: .env.example  Cargo.toml  README.md
src/: balance_fetcher.rs  main.rs
