[package]
name = "raydium-data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.11"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
serde = "1.0.217"
envy = "0.4.2"
url = { version = "2.5.4", features = ["serde"] }

raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = ["client"] }
solana-client = "<1.17.0"
solana-sdk = "<1.17.0"
solana-rpc-client-api = "<1.17.0"
solana-account-decoder = "<1.17"
spl-token = { version = "=4.0.0" }
spl-token-2022 = { version = "=0.9.0" }
spl-memo = "=4.0.0"
anchor-lang = "=0.29.0"
spl-associated-token-account = "2.2.0"
serde_json = "1.0.137"